--- a/profile_B.html
+++ b/profile_B.html
@@ -6,6 +6,7 @@
     <title>プロフィールB</title>
 </head>
 <body>
+    <p>盛岡情報ビジネス＆デザイン専門学校</p>
     <p>高度情報工学科</p>
     <p>外内優真</p>
     <p>苦手な科目：アルゴリズム</p>
